--- a/frontend/styles/modules/profile-group.module.css
+++ b/frontend/styles/modules/profile-group.module.css
@@ -360,9 +360,11 @@
 .containerChatGroup .chatBody .contentMess div pre {
   padding: 10px 5px;
   border-radius: 10px;
+  box-sizing: border-box;
   flex-wrap: wrap;
   text-wrap: wrap;
   word-wrap: break-word;
+  white-space: pre-wrap;
   background: var(--primary-bg);
 }
 
