--- a/frontend/styles/modules/group.module.css
+++ b/frontend/styles/modules/group.module.css
@@ -19,6 +19,42 @@
   border-radius: 10px;
   background: var(--secondary-bg);
 }
+.menuLeft .blocNav h4 {
+  font-size: small;
+}
+.imgNew {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@keyframes bounce {
+  from,
+  20%,
+  53%,
+  80%,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    transform: translate3d(0, -10px, 0);
+  }
+
+  70% {
+    transform: translate3d(0, -5px, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -4px, 0);
+  }
+}
+.notifJoinGroup,
+.imgNew img {
+  width: 50px;
+  height: 50px;
+  animation: bounce 1.5s infinite;
+}
 
 .menuLeft h4 i {
   margin-right: 10px;
@@ -72,6 +108,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  padding-top: 10px;
   padding-bottom: 10rem;
   overflow-y: scroll;
 }
@@ -83,7 +120,7 @@
   padding: 5px;
 }
 
-.listGroupManaged .group  .notifGroup{
+.listGroupManaged .group .notifGroup {
   position: absolute;
   background-color: #e90000;
   font-size: 10px;
@@ -94,7 +131,6 @@
   /* top: 20px;  */
   cursor: pointer;
   margin-left: 12px;
-
 }
 .listGroupManaged .group a img {
   width: 50px;
@@ -102,8 +138,16 @@
   border: 1px solid gray;
   border-radius: 10px;
 }
+.listGroupManaged .group a .notifJoinGroup{
+  background: transparent;
+  border: none;
+}
 
 .listGroupManaged .group a span {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding-left: 10px;
   text-transform: capitalize;
 }
@@ -200,7 +244,6 @@
   justify-content: space-between;
 }
 
-
 .postSugess div .nameGroupMembres a {
   display: flex;
   flex-direction: column;
@@ -217,7 +260,7 @@
   font-weight: normal;
   color: gray;
 }
-.postSugess div .btns{
+.postSugess div .btns {
   display: flex;
   gap: 5px;
 }
@@ -295,7 +338,7 @@
   width: 100px;
   height: 100px;
 }
-.noResults p{
+.noResults p {
   width: 80%;
   text-align: center;
 }
@@ -409,7 +452,6 @@
   .postSugess div {
     width: 100%;
     height: fit-content;
- 
   }
   .postSugess div .nameGroupMembres a {
     justify-content: start;
