--- a/frontend/styles/comment.css
+++ b/frontend/styles/comment.css
@@ -56,6 +56,7 @@
   align-items: center;
   justify-content: center;
   border: solid 2px;
+  
 }
 
 .section-comment .middle .profile-pic-group {
@@ -101,6 +102,7 @@
 .section-comment .middle .profileuser .left-side .profile-pic-group a:first-of-type img:first-of-type {
   border-radius: 20%;
   border: 1px solid;
+  object-fit: cover;
 }
 
 .section-comment .middle .profileuser .left-side .profile-pic-group a:last-of-type img:last-of-type {
