--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -88,6 +88,7 @@
   img:first-of-type {
   border-radius: 20%;
   border: 1px solid;
+  object-fit: cover;
 }
 .post
   .profileuser
@@ -98,6 +99,7 @@
   width: 40px;
   height: 40px;
   border-radius: 100%;
+ 
 }
 
 .Follow,
