--- a/frontend/styles/modules/CreatePost.module.css
+++ b/frontend/styles/modules/CreatePost.module.css
@@ -3,8 +3,8 @@
   width: 550px;
   height: fit-content;
   /* max-height: 70vh; */
-  overflow: hidden;
-  overflow-y: scroll;
+  /* overflow: hidden; */
+  /* overflow-y: scroll; */
   position: absolute;
   top: 0%;
   left: 50%;
@@ -15,7 +15,7 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    z-index: 100;
+    z-index: 800;
 }
 .postHeader{
   display: flex;
