--- a/frontend/styles/modules/emoji.module.css
+++ b/frontend/styles/modules/emoji.module.css
@@ -7,6 +7,7 @@
     background: #FFFFFF;
     box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
     border-radius: 13px;
+    z-index: 900;
 }
 
 .popup .form {
@@ -28,6 +29,7 @@
   right: 5px;
   font-size: 22px;
   color: black;
+  cursor: pointer;
 }
 .input_field {
     width: 100%;
@@ -60,6 +62,7 @@
 
 .popup .form .listes span {
     font-size: 24px;
+    cursor: pointer;
 }
 
 .popup .form .listes::-webkit-scrollbar {
