--- a/frontend/styles/modules/profile-group.module.css
+++ b/frontend/styles/modules/profile-group.module.css
@@ -294,7 +294,19 @@
 .eventDetails .activeBtn {
   background: var(--second-blue);
 }
-
+.selectOption{
+  width: 100%;
+  margin-top: 20px;
+  padding: 10px 0px;
+  font-size: 16px;
+  background: transparent;
+  cursor: pointer;
+  outline: none;
+}
+.selectOption > option{
+  color: #2d2d2d;
+  cursor: pointer;
+}
 
 
 
