--- a/frontend/styles/modules/profile-group.module.css
+++ b/frontend/styles/modules/profile-group.module.css
@@ -84,6 +84,10 @@
   padding: 10px;
   border-radius: 10px;
   background: var(--secondary-bg);
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  text-wrap: wrap;
 }
 
 .contentPostAbout .aboutBloc pre {
